k8s-apps/hello-kubernetes-first-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-kubernetes-first
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  tls:
    - hosts:
        - kubeapp1.vallift.com
      secretName: letsencrypt-production
  rules:
  - host: kubeapp1.vallift.com
    http:
      paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-kubernetes-first
                port:
                  number: 80
